消しゴムモードを作成した

--- a/src/main/resources/templates/sequencer.html
+++ b/src/main/resources/templates/sequencer.html
@@ -35,6 +35,9 @@ th:${{nEdoValueInt}}
 </tbody>
 </table>
 
+<label><input type="radio" id="rd0" name="NoteEditChange" value="0"  checked="checked" />鉛筆</label>
+<label><input type="radio" id="rd1" name="NoteEditChange" value="1" />消しゴム</label>
+
 <!-- このテーブルを最後に表示するような対応を入れないとtable classが反映されないのでは？ -->
 <div class="table-responsive"> <!-- tableをdivでくくって横スクロールだす -->
 <table id="MainTable" onmousedown="mouseDown(this, event); return false;" onmouseup="mouseUp(this, event);" onmousemove="mouseMove(this, event); return false;">
