ドラッグ開始位置より前にドラッグしたときのエラーハンドリングが不十分

--- a/src/main/resources/templates/sequencer.html
+++ b/src/main/resources/templates/sequencer.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen"></link>
+<link href="/OriginalCSS/TableEdit.css" rel="stylesheet" media="screen"></link>
 
 <style>
 h1 { font-size:18pt; font-weight:bold; color:gray; }
@@ -72,6 +73,7 @@ th:${{nEdoValueInt}}
 <script src="/OriginalJS/Sound.js"></script>
 <script src="/OriginalJS/MakeSequencerView.js" ></script>
 <script src="/OriginalJS/DragAndDrop.js" ></script>
+<script src="/OriginalJS/Note.js" ></script>
 <!-- <script src="OriginalJS/MakeSequencerView.js" th:inline="javascript">
 という書き方にしても、js側がthymeleafの書き方認識できず失敗する。
 そのため一度中継する書き方をする</script> -->
